some notification fixes i need seleep[ fuck odd

--- a/Pages/Shared/_PostPartial.cshtml
+++ b/Pages/Shared/_PostPartial.cshtml
@@ -1,4 +1,4 @@
-@model NewsSite.BL.Post
+@* @model NewsSite.BL.Post
 
 <!-- ------------------------------------------------------------------------------
      _PostPartial.cshtml
@@ -366,4 +366,4 @@
     font-size: 14px;
     padding: 5px 0;
 }
-</style>
+</style> *@
