--- a/Pages/Shared/_PostTemplatePartial.cshtml
+++ b/Pages/Shared/_PostTemplatePartial.cshtml
@@ -1,4 +1,4 @@
-@{
+@* @{
     Layout = null;
 }
 
@@ -248,4 +248,4 @@
         `;
         document.head.appendChild(style);
     }
-</script>
+</script> *@
