--- a/Views/Shared/Components/PostCard/List.cshtml
+++ b/Views/Shared/Components/PostCard/List.cshtml
@@ -97,7 +97,7 @@
                     }
                 }
                 
-                @if (context.CanEdit)
+                @if (false)// edit still not implemented
                 {
                     <button class="list-action-btn edit-btn" onclick="editPost(@post.ArticleID)">
                         <i class="fas fa-edit"></i>
